[package]
name = "markov-url"
version = "0.1.0"
authors = ["Jeremy Carter <jeremy@jeremycarter.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
url = "2.2"

[dev-dependencies]
cargo-watch = "7.5"
